crates/damask/tests/ui/unknown_template_option.stderr
error: unknown `template` option; expected `path = "…"`
 --> tests/ui/unknown_template_option.rs:4:12
  |
4 | #[template(bogus = "x")]
  |            ^^^^^
